[package]
name = "kalidasa"
version = "0.1.0"
authors = ["Wyatt Arent <hello@wyatt.engineer>"]

[dependencies]
snips-nlu-lib = { git = "https://github.com/talkative-ai/snips-nlu-rs", branch = "develop" }
redis = "0.8.0"
hyper = "0.11"
futures = "0.1.14"
serde_json = "1.0"
url = "1.7.0"
log = "0.4"
pretty_env_logger = "0.2"
tokio = "0.1.5"